[tool.poetry]
name = "detect-tg-bot"
version = "0.1.0"
description = ""
authors = ["Ivan Matveev <matveev92iv@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
ultralytics = "^8.1.6"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
